@@ -6,6 +6,7 @@ Changes for 1.7.0
 
 Changes for 1.6.2
 
+ - [ZBX-593] fixed stop escalations if action is disabled (Sasha)
  - [ZBX-592] fixed incorrect {TRIGGER.STATUS} value in recovery message (Sasha)
  - [DEV-250] added support of vm.memory.size under AIX (Sasha)
  - [DEV-250] added full support of proc.num/mem under Linux 2.4/2.6, Solaris and AIX (Sasha)
